syntax = "proto3";
package qf;
option go_package   = "github.com/quickfeed/quickfeed/qf";
option swift_prefix = "";

import "qf/types.proto";

// Message types that are used as requests and responses in API calls.

message CourseSubmissions {
    map<uint64, Submissions> submissions = 1;
}

message ReviewRequest {
    uint64 courseID = 1;
    Review review   = 2;
}

message CourseRequest {
    uint64 courseID = 1;
}

message GroupRequest {
    uint64 courseID = 1;
    uint64 userID   = 2;
    uint64 groupID  = 3;
}

message Organization {
    uint64 ScmOrganizationID   = 1;
    string ScmOrganizationName = 2;
}

message EnrollmentRequest {
    oneof FetchMode {
        uint64 courseID = 1;
        uint64 userID   = 2;
    }
    repeated Enrollment.UserStatus statuses = 3;
}

message SubmissionRequest {
    enum SubmissionType {
        ALL   = 0;  // fetch all submissions
        USER  = 1;  // fetch all user submissions
        GROUP = 2;  // fetch all group submissions
    }
    uint64 CourseID     = 1;
    uint64 AssignmentID = 2;  // only used for user and group submissions
    oneof FetchMode {
        uint64 UserID       = 3;  // fetch single user's submissions with build info
        uint64 GroupID      = 4;  // fetch single group's submissions with build info
        uint64 SubmissionID = 5;  // fetch single specific submission with build info
        SubmissionType Type = 6;  // fetch all submissions of given type without build info
    }
}

// UpdateSubmissionRequest is used to update manually reviewed submissions.
message UpdateSubmissionRequest {
    uint64 courseID     = 1;
    uint64 assignmentID = 2; // if non-zero, update all submissions
    uint64 submissionID = 3; // if non-zero, update single specific submission
    uint32 score        = 4; // only used for single submission
    bool release       = 5; // indicate whether or not to release submission(s) to students
    Submission.Status status = 6;
    repeated qf.Grade grades = 7;
}

// used to check whether student/group submission repo is empty
message RepositoryRequest {
    uint64 userID   = 1;
    uint64 groupID  = 2;
    uint64 courseID = 3;
}

message Repositories {
    map<uint32, string> URLs = 1;  // Map key is the Repository.Type
}

message RebuildRequest {
    uint64 courseID     = 1;
    uint64 assignmentID = 2;
    uint64 submissionID = 3;
}

message Void {}
